--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 <div class="paper image">
   <p> and I fallen in</p>
     <p>Love with You 😍 </p>
-   <img src="img1.JPG" />
+   <img src="1.JPG" />
 </div>
 
 <div class="paper image">
   <p>How can be </p>
   <p> Bestiee 4Ever❤️ </p>
 
-  <img src="img2.JPG" />
+  <img src="2.JPG" />
 </div>
 
 <div class="paper image">
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="img3.JPG" />
+  <img src="3.JPG" />
 </div>
 
 
