--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
   
 <div class="paper image">
-  <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
+  <p> and you are a</p>
+    <p>Italian bear 😍 </p>
    <img src="1.JPG" />
 </div>
 
 <div class="paper image">
-  <p>How can be </p>
-  <p> Bestiee 4Ever❤️ </p>
+  <p> </p>
+  <p> friends 4Ever❤️  </p>
 
   <img src="2.JPG" />
 </div>
